# ducklake

./: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.cache/clangd/: compile_commands.json
.cache/clangd/relassert/: compile_commands.json
.github/: duckdb-version
.github/config/extensions/: mssql.cmake  postgres_scanner.cmake  sqlite_scanner.cmake
.github/regression/: insert.csv
.github/workflows/: Catalogs.yml  ConfigTests.yml  Debug.yml  DeletionVectors.yml  DuckLakeVersion.yml  FormatCheck.yml  MainDistributionPipeline.yml  MinIO.yml  NoInline.yml  Regression.yml  issue-forward.yml
benchmark/postgres/: .gitignore  README.md  RESULTS.md  run.py  summarize.py
benchmark/postgres/k8s/: runner-pod.yaml
benchmark/postgres/results/: commit_stats.jsonl  release.jsonl
docs/: README.md  compaction.md  vortex_backend_spec.md
scripts/: change_db.py  run_quack_tests.py
src/: ducklake_extension.cpp
src/common/: CMakeLists.txt  ducklake_data_file.cpp  ducklake_name_map.cpp  ducklake_types.cpp  ducklake_util.cpp  ducklake_version.cpp  parquet_file_scanner.cpp  vortex_file_scanner.cpp
src/functions/: CMakeLists.txt  base_metadata_function.cpp  ducklake_add_data_files.cpp  ducklake_cleanup_files.cpp  ducklake_commit.cpp  ducklake_compaction_functions.cpp  ducklake_drop_data_files.cpp  ducklake_expire_snapshots.cpp  ducklake_flush_inlined_data.cpp  ducklake_list_files.cpp  ducklake_merge_adjacent_files.cpp  ducklake_murmur3.cpp  ducklake_options.cpp  ducklake_retry_classification.cpp  ducklake_set_commit_message.cpp  ducklake_set_option.cpp  ducklake_settings.cpp  ducklake_snapshots.cpp  ducklake_static_backup.cpp  ducklake_table_changes.cpp  ducklake_table_insertions.cpp
src/include/common/: ducklake_data_file.hpp  ducklake_murmur3.hpp  (+9 more)
src/metadata_manager/: CMakeLists.txt  ducklake_metadata_manager_v1_1.cpp  postgres_fast_metadata_manager.cpp  postgres_metadata_manager.cpp  quack_metadata_manager.cpp  sqlite_metadata_manager.cpp  sqlserver_metadata_manager.cpp  vgi_metadata_manager.cpp
src/storage/: CMakeLists.txt  ducklake_autoload_helper.cpp  ducklake_catalog.cpp  ducklake_catalog_set.cpp  ducklake_change_info.cpp  ducklake_checkpoint.cpp  ducklake_default_functions.cpp  ducklake_delete.cpp  ducklake_delete_filter.cpp  ducklake_deletion_vector.cpp  ducklake_field_data.cpp  ducklake_initializer.cpp  ducklake_inline_data.cpp  ducklake_inlined_data.cpp  ducklake_inlined_data_reader.cpp  ducklake_insert.cpp  ducklake_log_type.cpp  ducklake_merge_into.cpp  ducklake_metadata_manager.cpp  ducklake_multi_file_list.cpp  ducklake_multi_file_reader.cpp  ducklake_partition_data.cpp  ducklake_partition_filter.cpp  ducklake_puffin.cpp  ducklake_scan.cpp  ducklake_schema_entry.cpp  ducklake_secret.cpp  ducklake_server_side_commit.cpp  ducklake_sort_data.cpp  ducklake_staged_commit.cpp  ducklake_stats.cpp  ducklake_storage.cpp  ducklake_table_entry.cpp  ducklake_transaction.cpp  ducklake_transaction_changes.cpp  ducklake_transaction_manager.cpp  ducklake_transaction_state.cpp  ducklake_truncate.cpp  ducklake_update.cpp  ducklake_view_entry.cpp  (+1 more)
test/configs/: attach_ducklake.json  attach_ducklake_small_files.json  deletion_vectors.json  ducklake_version.json  minio.json  no_inline.json  postgres.json  postgres_fast.json  quack.json  sqlite.json  sqlserver.json
test/sql/: ducklake_basic.test
(+691 files in other folders)
